<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AreaTriangle"
    android:orientation="vertical"
    android:background="@drawable/quiz_app_bg">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="45sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/calculate_triangle_area"/>

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="50dp"
        android:layout_height="52dp"
        android:contentDescription="@string/to_go_back"
        android:layout_margin="20dp"
        android:background="@drawable/ic_back_black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_method"
        android:textSize="@dimen/lets_size"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        />

    <Button
        android:id="@+id/triangle_area_method_1"
        android:layout_marginTop="@dimen/margin_thirty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simple_calculate"
        />
    <Button
        android:id="@+id/triangle_area_method_2"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/lets_size"
        android:layout_height="wrap_content"
        android:text="@string/heron_s_formula_calculate"
        />

</LinearLayout>