<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".MainActivity"
    android:background="@drawable/calc_bg3">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/calculate_surface_area_of_cuboid"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="50dp"
        android:layout_height="52dp"
        android:contentDescription="@string/to_go_back"
        android:layout_margin="20dp"
        android:background="@drawable/ic_back_black"/>

    <EditText
        android:id="@+id/sa_cuboid_length"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginStart="@dimen/margin_thirty"
        android:hint="@string/enter_length"
        android:importantForAutofill="no"
        android:inputType="number"
        android:layout_marginTop="@dimen/eleven_size"
        android:minHeight="48dp"
        android:textColorHint="@color/gray"/>

    <EditText
        android:id="@+id/sa_cuboid_width"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginStart="@dimen/margin_thirty"
        android:hint="@string/enter_base"
        android:importantForAutofill="no"
        android:inputType="number"
        android:layout_marginTop="@dimen/eleven_size"
        android:minHeight="48dp"
        android:textColorHint="@color/gray"/>

    <EditText
        android:id="@+id/sa_cuboid_height"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/eleven_size"
        android:gravity="center"
        android:layout_marginStart="@dimen/margin_thirty"
        android:hint="@string/enter_height"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="@color/gray"/>


    <Button
        android:id="@+id/sa_cuboid_calc"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:layout_marginTop="@dimen/margin_twenty"
        android:text="@string/calculate"
        android:layout_marginStart="@dimen/margin_thirty"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/sa_cuboid_clear"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:layout_marginTop="@dimen/margin_twenty"
        android:text="@string/clear"
        android:layout_marginStart="@dimen/margin_thirty"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/sa_cuboid_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_fifty"
        tools:text="20"
        android:layout_marginStart="@dimen/margin_thirty"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-black"
        android:textSize="@dimen/margin_text_result"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="320dp"
        android:text="@string/by_vansh"/>

</LinearLayout>