<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AreaRectangle"
    android:background="@drawable/calc_bg3"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate_surface_area_of_cone"
        android:textSize="40sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"/>


    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="50dp"
        android:layout_height="52dp"
        android:contentDescription="@string/to_go_back"
        android:layout_margin="20dp"
        android:background="@drawable/ic_back_black"/>


    <EditText
        android:id="@+id/sa_cone_radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_radius"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_margin="20dp"
        android:inputType="number"
        android:textColorHint="@color/gray"/>
    <EditText
        android:id="@+id/sa_cone_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_height"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_margin="20dp"
        android:inputType="number"
        android:textColorHint="@color/gray"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sa_cone_calc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:layout_margin="30dp"
        android:background="@color/bmi_calc"
        android:textColor="@color/white"/>


    <TextView
        android:id="@+id/sa_cone_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="hello"
        android:background="#FEC260"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sa_cone_clr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vol_clear"
        android:layout_margin="30dp"
        android:background="@color/bmi_calc"
        android:textColor="@color/white"
        />


</LinearLayout>